--- a/templates/about.html
+++ b/templates/about.html
@@ -154,6 +154,10 @@
                 </div>
             -->
             </div>
+            <div class="text-center mt-5">
+                <a class="btn btn-primary py-3 px-5 mt-2" href="{% url 'index' %}">กลับสู่หน้าหลัก</a>
+            </div>
+            
         </div>
     </div>
     <!-- Team End -->
