--- a/templates/base.html
+++ b/templates/base.html
@@ -132,6 +132,10 @@
     {% endblock detail %}
         
     
+    {% block contact %}
+        
+    {% endblock contact %}
+        
 
      <!-- Footer Start -->
      <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
