--- a/templates/info_detail.html
+++ b/templates/info_detail.html
@@ -6,8 +6,8 @@
 <div class="container-xxl py-5">
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-            <h6 class="section-title bg-white text-center text-primary px-3">บทความ</h6>
-            <h1 class="mb-5">{{ post.post_title }}</h1>
+            <h6 class="section-title bg-white text-center text-primary px-3">สาระน่ารู้</h6>
+            <h1 class="mb-5">{{ info.info_title }}</h1>
         </div>
         
                    
@@ -15,7 +15,7 @@
             <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="course-item">
                     <div class="position-relative overflow-hidden">
-                        <a href="{% url 'post_detail' post.pk %}"><img class="img-fluid" src="{{post.post_image.url}}" alt=""></a>
+                        <a href="{% url 'info_list' %}"><img class="img-fluid" src="{{info.info_image.url}}" alt=""></a>
 
                     </div>
                 </div>
@@ -23,13 +23,13 @@
         </div>        
     <div class="container">
         <div class="row p-4 pb-0">
-            {{ post.post_content|safe }}
+            {{ info.info_content|safe }}
                        
-            <p><strong>เผยแพร่ : </strong> {{ post.published_date }}</p>
+            <p><strong>เผยแพร่ : </strong> {{ info.published }}</p>
         </div>
     </div>
     <div class="text-center mt-5">
-        <a class="btn btn-primary py-3 px-5 mt-2" href="{% url 'post_list' %}">อ่านทั้งหมด</a>
+        <a class="btn btn-primary py-3 px-5 mt-2" href="{% url 'info_list' %}">อ่านทั้งหมด</a>
     </div>
 </div>
 {% endblock detail %}
