--- a/templates/info_list.html
+++ b/templates/info_list.html
@@ -6,22 +6,22 @@
 <div class="container-xxl py-5">
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-            <h6 class="section-title bg-white text-center text-primary px-3">บทความ</h6>
+            <h6 class="section-title bg-white text-center text-primary px-3">สาระน่ารู้</h6>
             <h1 class="mb-5">การเลี้ยงลูกด้วยนมแม่</h1>
         </div>
    
         <div class="row g-4 justify-content-center">
-            {% for post in page_obj %}
+            {% for info in page_obj %}
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                 
                 <div class="course-item ">
                     <div class="position-relative overflow-hidden">
-                        <a href="{% url 'post_detail' post.pk %}"><img class="img-fluid" src="{{post.post_image.url}}" alt=""></a>
+                        <a href="{% url 'info_detail' info.pk %}"><img class="img-fluid" src="{{info.info_image.url}}" alt=""></a>
 
                     </div>
                     <div class="text-center p-4 pb-0">
-                        <h5 class="mb-4"><a href="{% url 'post_detail' post.pk %}">{{ post.post_title }}</a></h5>
-                        <h6 class="mb-4">เผยแพร่ : {{ post.published_date }}</h6>
+                        <h5 class="mb-4">{{ info.info_title }}</h5>
+                        <h6 class="mb-4">เผยแพร่ : {{ info.published }}</h6>
                     </div>
                 </div>
             </div>
