--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,8 +4,8 @@
 
 {% block contact %}
 
-<!-- Team Start -->
-<div class="container-xxl py-5">
+ <!-- Team Start -->
+ <div class="container-xxl py-5">
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
             <h6 class="section-title bg-white text-center text-primary px-3">ทีมงาน</h6>
@@ -15,7 +15,7 @@
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="team-item bg-light">
                     <div class="overflow-hidden">
-                        <img class="img-fluid" src="{% static 'img/prach.jpg' %}" alt="">
+                        <a href="{% url 'contact' %}"><img class="img-fluid" src="{% static 'img/prach.jpg' %}" alt=""></a>
                     </div>
                     <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                         <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -26,15 +26,15 @@
                         </div>
                     </div>
                     <div class="text-center p-4">
-                        <h5 class="mb-0">นายปรัช บุญกวีร์</h5>
-                        <small>นักวิชาการสาธารณสุขชำนาญการ</small>
+                        <a href="{% url 'contact' %}"><h5 class="mb-0">นายปรัช บุญกวีร์</h5></a>
+                        <a href="{% url 'contact' %}"><small>นักวิชาการสาธารณสุขชำนาญการ</small></a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="team-item bg-light">
                     <div class="overflow-hidden">
-                        <img class="img-fluid" src="{% static 'img/about1.jpg' %}" alt="">
+                        <a href="{% url 'contact' %}"><img class="img-fluid" src="{% static 'img/about1.jpg' %}" alt=""></a>
                     </div>
                     <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                         <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -45,15 +45,15 @@
                         </div>
                     </div>
                     <div class="text-center p-4">
-                        <h5 class="mb-0">นายกฤษฎา พรหมภากร</h5>
-                        <small>ประธาน อ.ส.ม. หมู่ 5</small>
+                        <a href="{% url 'contact' %}"><h5 class="mb-0">นายกฤษฎา พรหมภากร</h5></a>
+                        <a href="{% url 'contact' %}"><small>ประธาน อ.ส.ม. หมู่ 5</small></a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="team-item bg-light">
                     <div class="overflow-hidden">
-                        <img class="img-fluid" src="{% static 'img/nurse.jpg' %}" alt="">
+                        <a href="{% url 'contact' %}"><img class="img-fluid" src="{% static 'img/nurse.jpg' %}" alt=""></a>
                     </div>
                     <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                         <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -64,8 +64,8 @@
                         </div>
                     </div>
                     <div class="text-center p-4">
-                        <h5 class="mb-0">น.ส.ดารุณี นุ้ยเขียว</h5>
-                        <small>พยาบาลวิชาชีพชำนาญการ ทีปรึกษา</small>
+                        <a href="{% url 'contact' %}"><h5 class="mb-0">น.ส.ดารุณี นุ้ยเขียว</h5></a>
+                        <a href="{% url 'contact' %}"><small>พยาบาลวิชาชีพชำนาญการ ทีปรึกษา</small></a>
                     </div>
                 </div>
             </div>
@@ -89,10 +89,9 @@
             </div>
         -->
         </div>
-        
-        
     </div>
 </div>
+
 <!-- Team End -->
 
         <!-- Contact Start -->
